--- a/style.css
+++ b/style.css
@@ -5,11 +5,30 @@
  display: flex;
  flex-direction: column;
  justify-content: center;
- border-radius: 2em;
- padding: 2em;
+ border-radius: 13em;
+ padding: 5em;
  -webkit-box-shadow: 10px 10px 67px 9px rgba(0,0,0,0.71);
 -moz-box-shadow: 10px 10px 67px 9px rgba(0,0,0,0.71);
 box-shadow: 10px 10px 67px 9px rgba(0,0,0,0.71);
+background: rgba(73,155,234,1);
+background: -moz-linear-gradient(top, rgba(73,155,234,1) 0%, rgba(73,155,234,1) 79%, rgba(32,124,229,1) 100%);
+background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(73,155,234,1)), color-stop(79%, rgba(73,155,234,1)), color-stop(100%, rgba(32,124,229,1)));
+background: -webkit-linear-gradient(top, rgba(73,155,234,1) 0%, rgba(73,155,234,1) 79%, rgba(32,124,229,1) 100%);
+background: -o-linear-gradient(top, rgba(73,155,234,1) 0%, rgba(73,155,234,1) 79%, rgba(32,124,229,1) 100%);
+background: -ms-linear-gradient(top, rgba(73,155,234,1) 0%, rgba(73,155,234,1) 79%, rgba(32,124,229,1) 100%);
+background: linear-gradient(to bottom, rgba(73,155,234,1) 0%, rgba(73,155,234,1) 79%, rgba(32,124,229,1) 100%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#499bea', endColorstr='#207ce5', GradientType=0 );
+}
+
+div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 0;
+    padding: 0;
+    background-image: url('images/flex.png');
+    background-size:95% 95%;
+    background-repeat: no-repeat;
 }
 
 .container {
